  item remembers its wxRect area (Brian A. Vanderburg II)
- wxBookCtrl renamed to wxBookCtrlBase, wxBookCtrl is reserved for most native
  book control (for now wxChoicebook for MSSmartphone, wxNotebook for others).
  Necessary event macros, types and styles mapped accordingly.
- new wxBrush::IsHatch() checking for brush type replaces IS_HATCH macro

Unix:

- wxPuts() now correctly outputs trailing new line in Unicode build

wxGTK:

- Added printing support by way of using libgnomeprint. The library
  now checks at runtime, if the library is installed and will use it
  if it is. Otherwise, it will fall back to the old PostScript printing
  code, from which the Pango drawing code was removed.
- Implemented/improved wxDC::DrawRotatedText()
- fixed wxFileDialog::SetWildcard()
- native file dialog is now used if available (Zbigniew Zagorski)
- implemented wxTextCtrl::Freeze() and Thaw(). The GtkTextBuffer
  is not a valid one during frozen state. Get a pointer to it right
  after wxTextCtrl creation if you really need to. (Mart Raudsepp)
- Changed calls to GTK+ 2.4.x functions so that the code checks at
  runtime, which library version is installed so that these functions
  are only called with GTK+ 2.4.x installed and should yield linker
  errors otherwise.

wxMac:

- wxDynamicLibrary::GetDllExt() now returns ".bundle", not ".dylib"
- wxDynamicLibrary::GetSymbol() now prepends underscore to the symbol name

wxMSW:

- fixed enhanced metafiles loading from files (Andreas Goebel)
- wxRadioButtons no longer have to be consecutive in a group
- fixed spurious selection of combobox text during resize

wxWinCE:
- Added support for MS Handheld PC 2000. This was done before 2.5.4,
  but not mentioned anywhere.

wxUniv:

- wxBU_... button align flags support
- vertical notebook orientation support
- 3rd state support for checkboxes
- wxLB_SORT and wxCB_SORT now cause case-insensitive sorting

wxPalmOS:

- William Osborne has won and new port was born